--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
-<html>
+<html lang="en">
   <head>
+    <title>WikiFinder</title>
     <link href="https://fonts.googleapis.com/css?family=Merriweather|PT+Sans" rel="stylesheet">
     <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id='error-container'>
       <p class='error'>No results found</p>
-      <button class='clear' />
+      <button class='clear'></button>
     </div>
-    <sidebar id="saved-item-container">
-      <a id="saved-item-btn">Saved Items</a>
+    <aside id="saved-item-container">
+      <button id="saved-item-btn" value="Saved Items">Saved Items</button>
       <div id="saved-items">
       </div>
-    </sidebar>
+    </aside>
 
     <main id="search-container">
       <h1 class="site-title">Wikifinder</h1>
       <div id="search-bar-container">
         <input id="search-bar" type="text" placeholder="Enter your search term here">
-        <a id="search-btn">
+        <button id="search-btn">
           <div class="magnifier">
             <div class="clear"></div>
             <div class="circle"></div>
             <div class="handle"></div>
           </div>
-        </a>
+        </button>
 
         <div class="options">
           <label for="results-count">Number of results</label>
