Setting up groundwork for storing data in object
When I originally made this project last year, I thought
it would be a neat challenge to store session info in
the DOM itself. And while it was successful (storing
state notwithstanding), it doesn't allow for expansion.

**Changed**
* Introduced savedArticle object to... save articles.
* Began creating article class to handle article specific
  functions.
* Refactored article saving and clearing functions outside
  of $(document).ready()
* Brought back placeholder, seeing as inner text does not
  change. Changed from class to id.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <aside id="saved-item-container">
       <button id="saved-item-btn" value="Saved Items">Saved Items</button>
       <div id="saved-items">
+        <p id='placeholder'>No saved items to display.</p>
       </div>
     </aside>
 
