Cleaned up styling
**Changed**
* Moved .options outside of #search-bar-container
* Article button text is managed via JS, as opposed
  to via CSS
* Various changes to CSS layout, namely switching to
  flexbox in order to center page content.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>WikiFinder</title>
@@ -27,17 +28,16 @@
             <div class="handle"></div>
           </div>
         </button>
-
-        <div class="options">
-          <label for="results-count">Number of results</label>
-          <select id="results-count">
-            <option value="5">5</option>
-            <option value="10" selected>10</option>
-            <option value="20">20</option>
-            <option value="50">50</option>
-          </select> |
-          <a href="https://en.wikipedia.org/wiki/Special:Random" target="wikifinder">Get random article</a>
-        </div>
+      </div>
+      <div class="options">
+        <label for="results-count">Number of results</label>
+        <select id="results-count">
+          <option value="5">5</option>
+          <option value="10" selected>10</option>
+          <option value="20">20</option>
+          <option value="50">50</option>
+        </select> |
+        <a href="https://en.wikipedia.org/wiki/Special:Random" target="wikifinder">Get random article</a>
       </div>
       <div id="search-results"></div>
     </main>
